--- a/tests/Test/Zend/Application/application.ini
+++ b/tests/Test/Zend/Application/application.ini
@@ -1,4 +1,6 @@
 [tests]
+autoloaderNamespaces[] = "Rediska"
+
 pluginpaths.Rediska_Zend_Application_Resource = "Rediska/Zend/Application/Resource"
 
 resources.frontController.env = 'tests' ;Hack for fix Zend_Application bootstraping bug
