--- a/tests/Test/Zend/Application/application.ini
+++ b/tests/Test/Zend/Application/application.ini
@@ -6,5 +6,5 @@ pluginpaths.Rediska_Zend_Application_Resource = "Rediska/Zend/Application/Resour
 resources.frontController.env = 'tests' ;Hack for fix Zend_Application bootstraping bug
 
 resources.rediska.namespace = "Rediska_Test_"
-resources.rediska.servers.0.host = 127.0.0.1
-resources.rediska.servers.0.port = 6379
+resources.rediska.servers.0.host = REDISKA_HOST
+resources.rediska.servers.0.port = REDISKA_PORT
