fix example application

--- a/examples/retwitter/application/configs/application.ini
+++ b/examples/retwitter/application/configs/application.ini
@@ -1,10 +1,18 @@
 [production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
+phpSettings.date.timezone = "Europe/Moscow"
+
 includePaths.library = APPLICATION_PATH "/../library"
+includePaths.library = APPLICATION_PATH "/models"
+
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
+
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+
+resources.layout.layoutPath = APPLICATION_PATH "/views/layouts"
+resources.layout.layout = "default"
 
 autoloaderNamespaces[] = "Rediska"
 
