--- a/package.xml
+++ b/package.xml
@@ -6,9 +6,7 @@
  <name>Rediska</name>
  <channel>pear.geometria-lab.net</channel>
  <summary>Rediska (radish in Russian) - PHP client for Redis.</summary>
- <description>Rediska (radish in Russian) - PHP client for Redis.
-
-Redis is an advanced fast key-value database written in C. It can be used like memcached, in front of a traditional 
+ <description>Redis is an advanced fast key-value database written in C. It can be used like memcached, in front of a traditional 
 database, or on its own thanks to the fact that the in-memory datasets are not volatile but instead persisted on disk. 
 One of the cool features is that you can store not only strings, but lists and sets with atomic operations to push/pop 
 elements.
@@ -39,7 +37,7 @@ More information and documentation on homepage: http://rediska.geometria-lab.net
   <active>yes</active>
  </developer>
  <date>2010-04-01</date>
- <time>14:26:19</time>
+ <time>14:45:00</time>
  <version>
   <release>0.4.0</release>
   <api>0.4.0</api>
