Add anonymous classmap autoloader

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         }
     ],
     "require": {},
+    "autoload": {
+        "classmap": [""]
+    },
     "suggest": {
         "wesrc/yaZF1m": "dev-master"
     }
