Load Zend Framework from a release (1.11) and use it for tests

--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,24 @@
             "email": "till@php.net"
         }
     ],
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "zendframework/zendframework",
+                "version": "1.11.11",
+                "dist": {
+                    "url": "http://framework.zend.com/releases/ZendFramework-1.11.11/ZendFramework-1.11.11-minimal.zip",
+                    "type": "zip"
+                }
+            }
+        }
+    ],
     "require": {},
-    "autoload": {
-        "classmap": [""]
+    "require-dev": {
+        "zendframework/zendframework": "1.11.*"
     },
-    "suggest": {
-        "wesrc/yaZF1m": "dev-master"
+    "autoload": {
+        "classmap": ["library"]
     }
 }
