--- a/tests/redis.conf
+++ b/tests/redis.conf
@@ -1,10 +1,10 @@
 # By default Redis does not run as a daemon. Use 'yes' if you need it.
 # Note that Redis will write a pid file in /usr/local/var/run/redis.pid when daemonized.
-daemonize no
+daemonize yes
 
 # When running daemonized, Redis writes a pid file in /usr/local/var/run/redis.pid by
 # default. You can specify a custom pid file location here.
-pidfile /usr/local/var/run/redis.pid
+pidfile redis.pid
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
