turn off all persistence

--- a/tests/redis.conf
+++ b/tests/redis.conf
@@ -1,16 +1,10 @@
-# By default Redis does not run as a daemon. Use 'yes' if you need it.
-# Note that Redis will write a pid file in /usr/local/var/run/redis.pid when daemonized.
 daemonize yes
 
-# When running daemonized, Redis writes a pid file in /usr/local/var/run/redis.pid by
-# default. You can specify a custom pid file location here.
 pidfile redis.pid
-
-# Accept connections on the specified port, default is 6379.
-# If port 0 is specified Redis will not listen on a TCP socket.
 port 6380
-
-# If you want you can bind a single interface, if the bind option is not
-# specified all the interfaces will listen for incoming connections.
-#
 bind 127.0.0.1
+
+appendonly no 
+appendfsync no 
+no-appendfsync-on-rewrite no 
+vm-enabled no
