Proposal to change composer to use psr-0 path
This changes would make Rediska a psr-0 autoloading package in a
composer environment. Giving the user the option using `php
composer.phar dump-autoload --optimize` for a classmap if desired.

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,8 @@
         "zendframework/zendframework": "1.11.*"
     },
     "autoload": {
-        "classmap": ["library"]
+        "psr-0":{
+            "Rediska":["library/", "tests/library/"]
+        }
     }
 }
