--- a/package.xml
+++ b/package.xml
@@ -36,11 +36,11 @@ More information and documentation on homepage: http://rediska.geometria-lab.net
   <email>till@php.net</email>
   <active>yes</active>
  </developer>
- <date>2011-04-13</date>
- <time>12:57:04</time>
+ <date>2012-08-29</date>
+ <time>18:33:46</time>
  <version>
-  <release>0.5.6</release>
-  <api>0.5.6</api>
+  <release>0.5.7</release>
+  <api>0.5.7</api>
  </version>
  <stability>
   <release>beta</release>
@@ -53,9 +53,14 @@ This is an beta release, see README.markdown for examples.
  <contents>
   <dir baseinstalldir="/" name="/">
    <dir name="benchmarks">
+    <file baseinstalldir="/" name="connections.php" role="doc" />
     <file baseinstalldir="/" name="keydistributors.php" role="doc" />
    </dir> <!-- /benchmarks -->
    <dir name="examples">
+    <dir name="ratelimit">
+     <file baseinstalldir="/" name="example.php" role="doc" />
+     <file baseinstalldir="/" name="ratelimit.php" role="doc" />
+    </dir> <!-- /examples/ratelimit -->
     <dir name="retwitter">
      <dir name="application">
       <dir name="configs">
@@ -196,6 +201,7 @@ This is an beta release, see README.markdown for examples.
       <file baseinstalldir="/" name="IntersectSortedSets.php" role="php" />
       <file baseinstalldir="/" name="MoveToDb.php" role="php" />
       <file baseinstalldir="/" name="MoveToSet.php" role="php" />
+      <file baseinstalldir="/" name="Ping.php" role="php" />
       <file baseinstalldir="/" name="PopFromList.php" role="php" />
       <file baseinstalldir="/" name="PopFromListBlocking.php" role="php" />
       <file baseinstalldir="/" name="PrependToList.php" role="php" />
@@ -226,8 +232,12 @@ This is an beta release, see README.markdown for examples.
        <file baseinstalldir="/" name="Exception.php" role="php" />
        <file baseinstalldir="/" name="MultiBulkIterator.php" role="php" />
       </dir> <!-- /library/Rediska/Connection/Exec -->
+      <dir name="Socket">
+       <file baseinstalldir="/" name="ReadBuffer.php" role="php" />
+      </dir> <!-- /library/Rediska/Connection/Socket -->
       <file baseinstalldir="/" name="Exception.php" role="php" />
       <file baseinstalldir="/" name="Exec.php" role="php" />
+      <file baseinstalldir="/" name="Socket.php" role="php" />
       <file baseinstalldir="/" name="Specified.php" role="php" />
       <file baseinstalldir="/" name="TimeoutException.php" role="php" />
      </dir> <!-- /library/Rediska/Connection -->
@@ -326,6 +336,7 @@ This is an beta release, see README.markdown for examples.
      <file baseinstalldir="/" name="Config.php" role="php" />
      <file baseinstalldir="/" name="Connection.php" role="php" />
      <file baseinstalldir="/" name="Exception.php" role="php" />
+     <file baseinstalldir="/" name="Info.php" role="php" />
      <file baseinstalldir="/" name="Key.php" role="php" />
      <file baseinstalldir="/" name="Manager.php" role="php" />
      <file baseinstalldir="/" name="Monitor.php" role="php" />
@@ -400,6 +411,7 @@ This is an beta release, see README.markdown for examples.
        <file baseinstalldir="/" name="IntersectSortedSetsTest.php" role="test" />
        <file baseinstalldir="/" name="MoveToDbTest.php" role="test" />
        <file baseinstalldir="/" name="MoveToSetTest.php" role="test" />
+       <file baseinstalldir="/" name="PingTest.php" role="test" />
        <file baseinstalldir="/" name="PopFromListBlockingTest.php" role="test" />
        <file baseinstalldir="/" name="PopFromListTest.php" role="test" />
        <file baseinstalldir="/" name="PrependToListTest.php" role="test" />
@@ -461,6 +473,7 @@ This is an beta release, see README.markdown for examples.
         <file baseinstalldir="/" name="application2.ini" role="test" />
         <file baseinstalldir="/" name="application3.ini" role="test" />
         <file baseinstalldir="/" name="application4.ini" role="test" />
+        <file baseinstalldir="/" name="application5.ini" role="test" />
         <file baseinstalldir="/" name="CacheTest.php" role="test" />
         <file baseinstalldir="/" name="ResourceTest.php" role="test" />
        </dir> <!-- /tests/library/Rediska/Zend/Cache -->
@@ -498,10 +511,13 @@ This is an beta release, see README.markdown for examples.
     <file baseinstalldir="/" name="config.ini-dist" role="test" />
     <file baseinstalldir="/" name="phpunit.xml" role="test" />
     <file baseinstalldir="/" name="README.txt" role="test" />
+    <file baseinstalldir="/" name="redis.conf" role="test" />
+    <file baseinstalldir="/" name="redis2.conf" role="test" />
    </dir> <!-- /tests -->
-   <file baseinstalldir="/" name="CHANGELOG.txt" role="doc" />
+   <file baseinstalldir="/" name="CHANGELOG.md" role="data" />
+   <file baseinstalldir="/" name="composer.json" role="data" />
    <file baseinstalldir="/" name="LICENSE.txt" role="data" />
-   <file baseinstalldir="/" name="README.markdown" role="doc" />
+   <file baseinstalldir="/" name="README.md" role="data" />
    <file baseinstalldir="/" name="VERSION.txt" role="doc" />
   </dir> <!-- / -->
  </contents>
@@ -589,6 +605,7 @@ This is an beta release, see README.markdown for examples.
    <install as="Rediska/Command/IntersectSortedSets.php" name="library/Rediska/Command/IntersectSortedSets.php" />
    <install as="Rediska/Command/MoveToDb.php" name="library/Rediska/Command/MoveToDb.php" />
    <install as="Rediska/Command/MoveToSet.php" name="library/Rediska/Command/MoveToSet.php" />
+   <install as="Rediska/Command/Ping.php" name="library/Rediska/Command/Ping.php" />
    <install as="Rediska/Command/PopFromList.php" name="library/Rediska/Command/PopFromList.php" />
    <install as="Rediska/Command/PopFromListBlocking.php" name="library/Rediska/Command/PopFromListBlocking.php" />
    <install as="Rediska/Command/PrependToList.php" name="library/Rediska/Command/PrependToList.php" />
@@ -621,10 +638,13 @@ This is an beta release, see README.markdown for examples.
    <install as="Rediska/Connection/Exec/Exception.php" name="library/Rediska/Connection/Exec/Exception.php" />
    <install as="Rediska/Connection/Exec/MultiBulkIterator.php" name="library/Rediska/Connection/Exec/MultiBulkIterator.php" />
    <install as="Rediska/Connection/Exec.php" name="library/Rediska/Connection/Exec.php" />
+   <install as="Rediska/Connection/Socket/ReadBuffer.php" name="library/Rediska/Connection/Socket/ReadBuffer.php" />
+   <install as="Rediska/Connection/Socket.php" name="library/Rediska/Connection/Socket.php" />
    <install as="Rediska/Connection/Specified.php" name="library/Rediska/Connection/Specified.php" />
    <install as="Rediska/Connection/TimeoutException.php" name="library/Rediska/Connection/TimeoutException.php" />
    <install as="Rediska/Connection.php" name="library/Rediska/Connection.php" />
    <install as="Rediska/Exception.php" name="library/Rediska/Exception.php" />
+   <install as="Rediska/Info.php" name="library/Rediska/Info.php" />
    <install as="Rediska/Key/Abstract.php" name="library/Rediska/Key/Abstract.php" />
    <install as="Rediska/Key/Exception.php" name="library/Rediska/Key/Exception.php" />
    <install as="Rediska/Key/Hash.php" name="library/Rediska/Key/Hash.php" />
@@ -682,14 +702,14 @@ This is an beta release, see README.markdown for examples.
  <changelog>
   <release>
    <version>
-    <release>0.5.6</release>
-    <api>0.5.6</api>
+    <release>0.5.7</release>
+    <api>0.5.7</api>
    </version>
    <stability>
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2011-04-13</date>
+   <date>2012-08-29</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">New BSD License</license>
    <notes>
 This is an beta release, see README.markdown for examples.
