Bugfix: unbreak travis by fixing the location of the ZF download.

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
                 "name": "zendframework/zendframework",
                 "version": "1.11.11",
                 "dist": {
-                    "url": "http://framework.zend.com/releases/ZendFramework-1.11.11/ZendFramework-1.11.11-minimal.zip",
+                    "url": "http://packages.zendframework.com/releases/ZendFramework-1.11.11/ZendFramework-1.11.11-minimal.zip",
                     "type": "zip"
                 }
             }
